# ecta

./: .gitignore  LICENSE  README.md  bench.sh  cabal.project  compact-coupled-terms.cabal  ecta.cabal  package.yaml  run_tests.py  stack.yaml  working.yml
Plugin/: cct-plugin.cabal
Plugin/CCTP/: Plugin.hs  Utils.hs
TestPlugin/: Test.cabal  Test.hs  TestConstraint.hs
app/: Main.hs
benchmarks/: Benchmarks.hs
quickspectacle/: .LICENSE.swp  quickspectacle.cabal
quickspectacle/exe/: Main.hs
quickspectacle/src/: QuickSpectacle.hs
quickspectacle/src/QuickSpectacle/: Main.hs  Types.hs
scripts/: plot.py  run_tests.py
src/: DbOpt.hs  ECDFTA.hs  ECTA.hs  EqualitySaturation.hs  Equivalence.hs  Memo.hs  Minimization.hs  Paths.hs  Pretty.hs  SAT.hs  Term.hs  TermSearch.hs  Utilities.hs
src/Application/: EqualitySaturation.hs  SAT.hs
src/Application/TermSearch/: Benchmark.hs  Dataset.hs  Dataset.template  Evaluation.hs  TermSearch.hs  Type.hs  Utils.hs
src/Data/: ECTA.hs  Memoization.hs
src/Data/ECTA/: Paths.hs  Utilities.hs
src/Data/ECTA/Internal/: ECTA.hs  Paths.hs  Term.hs
src/Data/HashTable/: Extended.hs
src/Data/Interned/Extended/: HashTableBased.hs  (+1 more)
src/Data/Memoization/: Metrics.hs
src/Data/Persistent/: UnionFind.hs
src/Internal/: ECTA.hs  Paths.hs  Term.hs
src/Internal/Paths/: Zipper.hs
src/Utility/: Fixpoint.hs  HashJoin.hs
test/: CacheProfilingSpec.hs  DbSpec.hs  ECDFTASpec.hs  ECTASpec.hs  PathsSpec.hs  SATSpec.hs
test/Data/Persistent/: UnionFindSpec.hs
test/Test/Generators/: ECTA.hs
test/Utility/: HashJoinSpec.hs
(+6 files in other folders)
